Created a feature layout branch

--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Awwwards - Website</title>
     <link rel="stylesheet" href="style.css" />
+    <style media="screen">
+      *{
+        border: 1px solid red !important;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div class="container__fluid">
+      <div class="row">
+        <div class="element">1</div>
+        <div class="element">2</div>
+        <div class="element">3</div>
+        <div class="element">4</div>
+        <div class="element">5</div>
+        <div class="element">6</div>
+        <div class="element">7</div>
+        <div class="element">8</div>
+      </div>
+    </div>
+  </body>
 </html>
