Added layout content: 1. Hero buttons 2. Content buttons

--- a/index.html
+++ b/index.html
@@ -72,9 +72,107 @@
       <p class="hero-date"><strong>Site of the Day</strong> October 21, 2019</p>
       <div class="hero-info">
         <h2 class="title">Lagute & Laguta</h2>
-        <p>BY <span>ALEXANDER LAGUTA</span> FROM <strong>RUSSIA</strong> with 7.53</p>
+        <p>
+          BY <span>ALEXANDER LAGUTA</span> FROM <strong>RUSSIA</strong> with
+          7.53
+        </p>
+      </div>
+
+      <div class="hero-buttons row">
+        <div class="w-10 btn btn-blue m-r-5">Visit site</div>
+        <div class="w-10 btn btn-red m-r-5">Visit site</div>
       </div>
     </header>
+
+    <div class="hero-bottom row">
+      <h2 class="hb-left">
+        <strong>Sites of the day</strong> Previous winners
+      </h2>
+      <h2 class="hb-left">
+        <strong>Mobile execellence</strong> Site of the week
+      </h2>
+    </div>
+
+    <div class="container p-r-50 p-l-50">
+      <div class="row">
+        <div class=" card col-lg-4">
+          <img
+            class="card-image"
+            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
+            alt="image"
+          />
+          <div class="card-info">
+            <a href="#">Karel Komárek Family Fdn.</a>
+            <div class="info-meta row">
+              <p class="m-left">From Czech Republic</p>
+              <p class="m-right">October 20, 2019</p>
+            </div>
+          </div>
+
+          <div class="card-footer row">
+            <div class="f-left row">
+              <img
+                src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+                alt="image"
+              />
+              <p>BY CREATIVE NIGHTS</p>
+            </div>
+            <div class="f-right row">
+              <div class="btn btn-blue">HM</div>
+              <div class="btn btn-red">SOTD</div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <img class="card-image"
+            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
+            alt="image" />
+          <div class="card-info">
+            <a href="#">Karel Komárek Family Fdn.</a>
+            <div class="info-meta row">
+              <p class="m-left">From Czech Republic</p>
+              <p class="m-right">October 20, 2019</p>
+            </div>
+          </div>
+          
+          <div class="card-footer row">
+            <div class="f-left row">
+              <img src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+                alt="image" />
+              <p>BY CREATIVE NIGHTS</p>
+            </div>
+            <div class="f-right row">
+              <div class="btn btn-blue">HM</div>
+              <div class="btn btn-red">SOTD</div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <img class="card-image"
+            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
+            alt="image" />
+          <div class="card-info">
+            <a href="#">Karel Komárek Family Fdn.</a>
+            <div class="info-meta row">
+              <p class="m-left">From Czech Republic</p>
+              <p class="m-right">October 20, 2019</p>
+            </div>
+          </div>
+          
+          <div class="card-footer row">
+            <div class="f-left row">
+              <img src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+                alt="image" />
+              <p>BY CREATIVE NIGHTS</p>
+            </div>
+            <div class="f-right row">
+              <div class="btn btn-blue">HM</div>
+              <div class="btn btn-red">SOTD</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="https://kit.fontawesome.com/859eff7750.js"></script>
   </body>
