Added footer layout

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <div class="container p-r-50 p-l-50">
       <div class="row">
-        <div class=" card col-lg-4">
+        <div class="card col-lg-4">
           <img
             class="card-image"
             src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
@@ -123,7 +123,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="card col-lg-4">
           <img class="card-image"
             src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
             alt="image" />
@@ -134,7 +134,7 @@
               <p class="m-right">October 20, 2019</p>
             </div>
           </div>
-          
+
           <div class="card-footer row">
             <div class="f-left row">
               <img src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
@@ -147,7 +147,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="card col-lg-4">
           <img class="card-image"
             src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
             alt="image" />
@@ -158,7 +158,7 @@
               <p class="m-right">October 20, 2019</p>
             </div>
           </div>
-          
+
           <div class="card-footer row">
             <div class="f-left row">
               <img src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
@@ -174,6 +174,34 @@
       </div>
     </div>
 
+    <footer class="container--fluid">
+      <div class="row">
+        <div class="col-lg-9">
+          <p class="footer-text">The awards for design, creativity and innovation on the Internet</p>
+        </div>
+        <div class="col-lg-3">
+          <p class="footer-text">Next Conferences</p><i></i><strong>New York</strong> and <strong>Tokyo</strong>
+        </div>
+      </div>
+      <div class="row">
+        <ul class="footer-links row">
+          <li class="footer-link">Directory</li>
+          <li class="footer-link">Jobs</li>
+          <li class="footer-link">About Us</li>
+          <li class="footer-link">Winners</li>
+          <li class="footer-link">Nominees</li>
+          <li class="footer-link">Blog</li>
+        </ul>
+      </div>
+      <div class="row">
+        <span>Follow us</span>
+        <ul class="footer-social row">
+          <li class="sociallink">Twitter</li>
+          <li class="sociallink">Facebook</li>
+          <li class="sociallink">Youtube</li>
+        </ul>
+      </div>
+    </footer>
     <script src="https://kit.fontawesome.com/859eff7750.js"></script>
   </body>
 </html>
