styling almost done

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="index.css" />
     <style media="screen">
-      * {
+      /* * {
         border: 1px solid red !important;
-      }
+      } */
     </style>
   </head>
   <body>
@@ -84,38 +84,34 @@
       </div>
     </header>
 
-    <div class="hero-bottom row">
-      <h2 class="hb-left">
+    <div class="hero-bottom row center w-90 p-t-50 p-b-50">
+      <h2 class="hb-left col-lg-6">
         <strong>Sites of the day</strong> Previous winners
       </h2>
-      <h2 class="hb-left">
+      <h2 class="hb-left col-lg-6">
         <strong>Mobile execellence</strong> Site of the week
       </h2>
     </div>
 
-    <div class="container p-r-50 p-l-50">
+    <div class="container--fluid center w-90">
       <div class="row">
         <div class="card col-lg-4">
-          <img
-            class="card-image"
+          <img class="card-image w-95 m-b-10"
             src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
-            alt="image"
-          />
-          <div class="card-info">
-            <a href="#">Karel Komárek Family Fdn.</a>
-            <div class="info-meta row">
+            alt="image" />
+          <div class="card-info w-95">
+            <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
+            <div class="info-meta row p-b-20">
               <p class="m-left">From Czech Republic</p>
               <p class="m-right">October 20, 2019</p>
             </div>
           </div>
 
-          <div class="card-footer row">
+          <div class="card-footer row w-95 p-t-10">
             <div class="f-left row">
-              <img
-                src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
-                alt="image"
-              />
-              <p>BY CREATIVE NIGHTS</p>
+              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+                alt="image" />
+              <p>BY <strong>CREATIVE NIGHTS</strong></p>
             </div>
             <div class="f-right row">
               <div class="btn btn-blue">HM</div>
@@ -124,22 +120,22 @@
           </div>
         </div>
         <div class="card col-lg-4">
-          <img class="card-image"
+          <img class="card-image w-95 m-b-10"
             src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
             alt="image" />
-          <div class="card-info">
-            <a href="#">Karel Komárek Family Fdn.</a>
-            <div class="info-meta row">
+          <div class="card-info w-95">
+            <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
+            <div class="info-meta row p-b-20">
               <p class="m-left">From Czech Republic</p>
               <p class="m-right">October 20, 2019</p>
             </div>
           </div>
 
-          <div class="card-footer row">
+          <div class="card-footer row w-95 p-t-10">
             <div class="f-left row">
-              <img src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
                 alt="image" />
-              <p>BY CREATIVE NIGHTS</p>
+              <p>BY <strong>CREATIVE NIGHTS</strong></p>
             </div>
             <div class="f-right row">
               <div class="btn btn-blue">HM</div>
@@ -148,22 +144,22 @@
           </div>
         </div>
         <div class="card col-lg-4">
-          <img class="card-image"
+          <img class="card-image w-95 m-b-10"
             src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
             alt="image" />
-          <div class="card-info">
-            <a href="#">Karel Komárek Family Fdn.</a>
-            <div class="info-meta row">
+          <div class="card-info w-95">
+            <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
+            <div class="info-meta row p-b-20">
               <p class="m-left">From Czech Republic</p>
               <p class="m-right">October 20, 2019</p>
             </div>
           </div>
 
-          <div class="card-footer row">
+          <div class="card-footer row w-95 p-t-10">
             <div class="f-left row">
-              <img src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
                 alt="image" />
-              <p>BY CREATIVE NIGHTS</p>
+              <p>BY <strong>CREATIVE NIGHTS</strong></p>
             </div>
             <div class="f-right row">
               <div class="btn btn-blue">HM</div>
@@ -174,32 +170,194 @@
       </div>
     </div>
 
-    <footer class="container--fluid">
+    <div class="hero-bottom row center w-90 p-t-50 p-b-50">
+      <h2 class="hb-left col-lg-6">
+        <strong>Sites of the day</strong> Previous winners
+      </h2>
+      <h2 class="hb-left col-lg-6">
+        <strong>Mobile execellence</strong> Site of the week
+      </h2>
+    </div>
+
+    <div class="container--fluid center w-90">
+      <div class="row">
+        <div class="card col-lg-4">
+          <img class="card-image w-95 m-b-10"
+            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
+            alt="image" />
+          <div class="card-info w-95">
+            <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
+            <div class="info-meta row p-b-20">
+              <p class="m-left">From Czech Republic</p>
+              <p class="m-right">October 20, 2019</p>
+            </div>
+          </div>
+
+          <div class="card-footer row w-95 p-t-10">
+            <div class="f-left row">
+              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+                alt="image" />
+              <p>BY <strong>CREATIVE NIGHTS</strong></p>
+            </div>
+            <div class="f-right row">
+              <div class="btn btn-blue">HM</div>
+              <div class="btn btn-red">SOTD</div>
+            </div>
+          </div>
+        </div>
+        <div class="card col-lg-4">
+          <img class="card-image w-95 m-b-10"
+            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
+            alt="image" />
+          <div class="card-info w-95">
+            <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
+            <div class="info-meta row p-b-20">
+              <p class="m-left">From Czech Republic</p>
+              <p class="m-right">October 20, 2019</p>
+            </div>
+          </div>
+
+          <div class="card-footer row w-95 p-t-10">
+            <div class="f-left row">
+              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+                alt="image" />
+              <p>BY <strong>CREATIVE NIGHTS</strong></p>
+            </div>
+            <div class="f-right row">
+              <div class="btn btn-blue">HM</div>
+              <div class="btn btn-red">SOTD</div>
+            </div>
+          </div>
+        </div>
+        <div class="card col-lg-4">
+          <img class="card-image w-95 m-b-10"
+            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
+            alt="image" />
+          <div class="card-info w-95">
+            <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
+            <div class="info-meta row p-b-20">
+              <p class="m-left">From Czech Republic</p>
+              <p class="m-right">October 20, 2019</p>
+            </div>
+          </div>
+
+          <div class="card-footer row w-95 p-t-10">
+            <div class="f-left row">
+              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+                alt="image" />
+              <p>BY <strong>CREATIVE NIGHTS</strong></p>
+            </div>
+            <div class="f-right row">
+              <div class="btn btn-blue">HM</div>
+              <div class="btn btn-red">SOTD</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row m-t-50">
+        <div class="card col-lg-4">
+          <img class="card-image w-95 m-b-10"
+            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
+            alt="image" />
+          <div class="card-info w-95">
+            <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
+            <div class="info-meta row p-b-20">
+              <p class="m-left">From Czech Republic</p>
+              <p class="m-right">October 20, 2019</p>
+            </div>
+          </div>
+
+          <div class="card-footer row w-95 p-t-10">
+            <div class="f-left row">
+              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+                alt="image" />
+              <p>BY <strong>CREATIVE NIGHTS</strong></p>
+            </div>
+            <div class="f-right row">
+              <div class="btn btn-blue">HM</div>
+              <div class="btn btn-red">SOTD</div>
+            </div>
+          </div>
+        </div>
+        <div class="card col-lg-4">
+          <img class="card-image w-95 m-b-10"
+            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
+            alt="image" />
+          <div class="card-info w-95">
+            <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
+            <div class="info-meta row p-b-20">
+              <p class="m-left">From Czech Republic</p>
+              <p class="m-right">October 20, 2019</p>
+            </div>
+          </div>
+
+          <div class="card-footer row w-95 p-t-10">
+            <div class="f-left row">
+              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+                alt="image" />
+              <p>BY <strong>CREATIVE NIGHTS</strong></p>
+            </div>
+            <div class="f-right row">
+              <div class="btn btn-blue">HM</div>
+              <div class="btn btn-red">SOTD</div>
+            </div>
+          </div>
+        </div>
+        <div class="card col-lg-4">
+          <img class="card-image w-95 m-b-10"
+            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
+            alt="image" />
+          <div class="card-info w-95">
+            <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
+            <div class="info-meta row p-b-20">
+              <p class="m-left">From Czech Republic</p>
+              <p class="m-right">October 20, 2019</p>
+            </div>
+          </div>
+
+          <div class="card-footer row w-95 p-t-10">
+            <div class="f-left row">
+              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+                alt="image" />
+              <p>BY <strong>CREATIVE NIGHTS</strong></p>
+            </div>
+            <div class="f-right row">
+              <div class="btn btn-blue">HM</div>
+              <div class="btn btn-red">SOTD</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="container--fluid center w-90 p-t-50">
       <div class="row">
         <div class="col-lg-9">
           <p class="footer-text">The awards for design, creativity and innovation on the Internet</p>
         </div>
         <div class="col-lg-3">
-          <p class="footer-text">Next Conferences</p><i></i><strong>New York</strong> and <strong>Tokyo</strong>
+          <p class="footer-text">Next Conferences<i></i><strong>New York</strong> and <strong>Tokyo</strong></p>
         </div>
       </div>
-      <div class="row">
+      <div class="row m-t-50">
         <ul class="footer-links row">
-          <li class="footer-link">Directory</li>
-          <li class="footer-link">Jobs</li>
-          <li class="footer-link">About Us</li>
-          <li class="footer-link">Winners</li>
-          <li class="footer-link">Nominees</li>
-          <li class="footer-link">Blog</li>
+          <li class="footer-link"><strong>Directory</strong></li>
+          <li class="footer-link"><strong>Jobs</strong></li>
+          <li class="footer-link"><strong>About Us</strong></li>
+          <li class="footer-link"><strong>Winners</strong></li>
+          <li class="footer-link"><strong>Nominees</strong></li>
+          <li class="footer-link"><strong>Blog</strong></li>
         </ul>
       </div>
-      <div class="row">
-        <span>Follow us</span>
-        <ul class="footer-social row">
-          <li class="sociallink">Twitter</li>
-          <li class="sociallink">Facebook</li>
-          <li class="sociallink">Youtube</li>
-        </ul>
+      <div class="row m-t-50">
+        <div class="footer-social row">
+          <strong>Follow us</strong>
+          <ul class="footer-social row">
+            <li class="sociallink">Twitter</li>
+            <li class="sociallink">Facebook</li>
+            <li class="sociallink">Youtube</li>
+          </ul>
+        </div>
       </div>
     </footer>
     <script src="https://kit.fontawesome.com/859eff7750.js"></script>
